# prospector-zmk-module

./: .gitignore  0001-FEAT-Implement-dynamic-memory-allocation-for-overlay.patch  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup-20251116-234921  CMakeLists.txt  DEVICE_TREE_FALLBACK_SUCCESS_ANALYSIS.md  Kconfig  Kconfig.advertisement  LICENSE  PROSPECTOR_FONT_OPTIONS_GUIDE.md  README.md  SCANNER_RECONSTRUCTION_DESIGN.md  github_issue_1_response.md  github_issue_comment.md  lalapadmini-left-debug.uf2  prospector_display_y_offset_fixed.uf2  settings_reset-seeeduino_xiao_ble-zmk.uf2  simple_github_response.md  simple_issue_comment.md  test_scanner_simple_backlight.overlay  working_firmware.uf2  zmk-debug.uf2  zmk-main-branch.uf2  zmk-original-settings.uf2  zmk-simple-test-original.uf2  zmk-simplified.uf2
.github/workflows/: build-test.yml  build.yml
boards/: seeeduino_xiao_ble.overlay
boards/shields/prospector_adapter/: Kconfig.defconfig  prospector_adapter.overlay
boards/shields/prospector_adapter/boards/: seeeduino_xiao_ble.overlay
boards/shields/prospector_scanner/: CMakeLists.txt  Kconfig.defconfig  Kconfig.shield  prospector_scanner.conf  prospector_scanner.keymap  prospector_scanner.overlay  prospector_scanner_als.overlay
boards/shields/prospector_scanner/boards/: seeeduino_xiao_ble-sensor.overlay  seeeduino_xiao_ble.overlay
boards/shields/prospector_scanner/include/: fonts.h  scanner_power_mgmt.h
boards/shields/prospector_scanner/src/: backlight_init.c  behavior_settings_toggle.c  brightness_control.c  brightness_control.h  connection_status_widget.c  connection_status_widget.h  custom_status_screen.c  debug_status_widget.c  debug_status_widget.h  display_brightness.c  display_rotate_init.c  display_settings.c  display_settings.h  display_settings_widget.c  display_settings_widget.h  display_test.c  field_layout.c  field_layout.h  fonts.h  fonts_carrefinho.h  hello_widget.h  keyboard_list_widget.c  keyboard_list_widget.h  layer_status_widget.c  layer_status_widget.h  minimal_status_screen.c  modifier_status_widget.c  modifier_status_widget.h  operator_layout.c  operator_layout.h  profile_status_widget.c  profile_status_widget.h  prospector_layouts.c  prospector_layouts.h  radii_layout.c  radii_layout.h  scanner_battery_status_widget.c  scanner_battery_status_widget.h  scanner_battery_widget.c  scanner_battery_widget.h  (+14 more)
boards/shields/prospector_scanner/src/events/: scanner_update_event.c  scanner_update_event.h  swipe_gesture_event.c  swipe_gesture_event.h
boards/shields/prospector_scanner/src/fonts/: NerdFonts_Regular_20.c  NerdFonts_Regular_40.c
boards/shields/prospector_scanner/src/fonts_carrefinho/: DINish_Condensed_Semibold_20.c  DINish_Condensed_Semibold_22.c  DINish_Expanded_Light_36.c  DINish_Medium_24.c  FG_Medium_20.c  FG_Medium_21.c  FG_Medium_24.c  FG_Medium_26.c  FR_Medium_32.c  FR_Regular_30.c  FR_Regular_36.c  FR_Regular_48.c  FR_Thin_48.c  PPF_NarrowThin_64.c  Symbols_Bold_26.c  Symbols_Medium_28.c  Symbols_Regular_28.c  Symbols_Semibold_28.c  Symbols_Semibold_32.c
boards/shields/scanner_pocket/: CMakeLists.txt  Kconfig.defconfig  Kconfig.shield  scanner_pocket.conf  scanner_pocket.keymap  scanner_pocket.overlay
boards/shields/scanner_pocket/assets/: NerdFonts_Regular_20.c  custom_fonts.h  quinquefive_12.c  quinquefive_24.c  quinquefive_8.c  unscii_14.c
boards/shields/scanner_pocket/src/: ls0xx_rotated.c  pocket_display.c  scanner_stub.c
case/: disp_mount.stl  main_body.stl  main_body_no_sensor.stl  prospector.step  rear_cap.stl  sensor_light_guide.stl
drivers/display/: CMakeLists.txt
dts/behaviors/: settings_toggle.dtsi
dts/bindings/behaviors/: zmk,behavior-settings-toggle.yaml
include/zmk/: periodic_adv_protocol.h  prospector_compat.h  status_advertisement.h  status_scanner.h
modules/lvgl/: CMakeLists.txt
src/: periodic_adv_protocol.c  status_advertisement.c  status_scanner.c
src/split/bluetooth/: central_status_changed_observer.c
test/advertisement_test/config/: corne.conf  west.yml
test/scanner_build_test/config/: prospector_scanner.conf  prospector_scanner.keymap  west.yml
zephyr/: module.yml
zmk-build-v021/config/: prospector_adapter.conf  west.yml
zmk-config-prospector-clean/config/: prospector_adapter.conf  prospector_adapter.keymap  west.yml
zmk-display-simple/clean-env/: pyvenv.cfg
zmk-display-simple/config/: west.yml
zmk-display-test/: Dockerfile  build-docker.sh
zmk-display-test/config/: build.yaml
zmk-display-test/config/boards/shields/st7789_test/: Kconfig.defconfig  Kconfig.shield  st7789_test.conf  st7789_test.keymap  st7789_test.overlay
zmk-display-test/zmk-env/: pyvenv.cfg
zmk-env/: pyvenv.cfg
zmk-fresh-env/: pyvenv.cfg
zmk-minimal-test/: LVGL9_CONTAINER_LABEL_FREEZE_BUG.md  ZEPHYR_4_1_MIGRATION_TROUBLESHOOTING.md  bar_test.uf2  display_test_dynamic_widgets.uf2  display_test_live.uf2  display_test_scanner.uf2  display_test_scanner_start.uf2  display_test_swipe_debug.uf2  display_test_swipe_transition.uf2  display_test_touch.uf2  display_test_touch_cst816s.uf2  display_test_touch_debug.uf2  display_test_touch_handler.uf2  display_test_touch_steps.uf2  display_test_touch_verbose.uf2  display_test_with_apds9960.uf2  exact_layout_test.uf2  full_widget_test.uf2  labels_only_test.uf2  widget_test.uf2
zmk-minimal-test/config/: west.yml
zmk-minimal-test/config/boards/shields/display_test/: CMakeLists.txt  Kconfig.defconfig  Kconfig.shield  backlight_init.c  custom_status_screen.c  display_test.conf  display_test.keymap  display_test.overlay  hello_widget.c  light_sensor_handler.c  swipe_event.c  swipe_event.h  touch_input_handler.c
zmk-minimal-test/config/boards/shields/minimal_test/: Kconfig.defconfig  Kconfig.shield  (+3 more)
zmk-scanner-fresh/: prospector_scanner.conf  prospector_scanner.keymap  west.yml
zmk-simple-test/config/: seeeduino_xiao_ble.conf  seeeduino_xiao_ble.keymap  seeeduino_xiao_ble.overlay  west.yml
zmk-simple-test/config/boards/: seeeduino_xiao_ble.overlay
zmk-simple-test/zmk-clean-env/: pyvenv.cfg
zmk-stable-test/config/: west.yml
(+7 files in other folders)
